Fix Syntax Highlighting Colour Contrast issue

--- a/src/static/css/almanac.css
+++ b/src/static/css/almanac.css
@@ -1493,7 +1493,7 @@ pre .comment {
 }
 
 pre .support {
-  color: #0086b3;
+  color: #006080;
 }
 
 pre .tag,
